fix overflow

--- a/sass/components/_box.scss
+++ b/sass/components/_box.scss
@@ -5,7 +5,6 @@
   &__body,
   &__footer {
     position: relative;
-    overflow: hidden;
   }
 
   // .card__body {
